<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <!--Menus-->
    <string name="app_name">DroidList</string>
    <string name="menu_1">Add Product</string>
    <string name="menu_2">Add Category</string>
    <string name="menu_3">New List</string>
    <string name="menu_4">Choose Itens</string>
    <string name="menu_sub">More</string>
    <string name="menu_sub_1">Delete this list</string>
    <string name="menu_sub_2">Delete Category</string>
    <string name="menu_sub_3">Reset Database</string>
    <string name="menu_sub_4">Font Size</string>
    <string name="menu_sub_5">Send by Email</string>
    <string name="menu_sub_6">About</string>
    <string name="banco">DroidListDB</string>
    <string name="erro.cadlista">The name of list should be informed</string>
    <string name="texto_lista">Choose the List</string>
    <string name="texto_categoria">Categories</string>
    <!--Labels-->
    <string name="label.adicionaProduto">Add Product </string>
    <string name="label.adicionar">Add </string>
    <string name="label.categoria">Category </string>
    <string name="label.categorias">Categories </string>
    <string name="label.cadastrar">Register </string>
    <string name="label.cancelar">Cancel </string>
    <string name="label.lista">List </string>
    <string name="label.produto">Product </string>
    <string name="label.produtos">Products </string>
    <string name="label.limpar">Clean Marked </string>
    <string name="label.aviso">Warning </string>
    <string name="label.sim">Yes </string>
    <string name="label.nao">No </string>
    <string name="label.acoes">Actions </string>
    <string name="label.editarItem">Edit Item </string>
    <string name="label.removerLista">Remove from list </string>
    <string name="label.eliminaItem">Delete Item Database </string>
    <string name="label.marcaItem">Product Mark</string>
    <string name="label.desmarcaItem">Product Unmark</string>
    <string name="label.adicionaLista">Add List </string>
    <string name="label.produtoCadastrar">Register Product </string>
    <string name="label.categoriaCadastrar">Register Category </string>
    <string name="label.alterar">Change </string>
    <string name="label.categoriaAlterar">Change Category </string>
    <string name="label.produtoAlterar">Change Product </string>
    <string name="label.apagar">Delete </string>
    <string name="label.categoriaApagar">Delete Category </string>
    <string name="label.totalLista">On List $ </string>
    <string name="label.totalCarrinho">On Cart $ </string>
    <string name="label.preco">Price </string>
    <string name="label.quantidade">Quantity </string>
    <string name="label.qtde">Qtde </string>
    <string name="label.modeda">$ </string>
    <string name="label.nova">New</string>
    <string name="label.minhalista">MY LIST</string>
    <!--Hints-->
    <string name="hint.categoria">Category </string>
    <string name="hint.nomeLista">Name of List </string>
    <string name="hint.informe.produto">Inform the Product </string>
    <!--Mensagens-->
    <string name="mensagem.confirma.exclusaoBanco">Are you sure you want to delete this item from the database? </string>
    <string name="mensagem.confirma.sair">Are you sure to quit the DroidList? </string>
    <string name="mensagem.confirma.exclusaoLista">Are you sure you want to DELETE this list? </string>
    <string name="mensagem.informa.nomeProduto">Product name and category should be informed! </string>
    <string name="mensagem.informa.campoVazio">Empty Field! </string>
    <string name="mensagem.informa.produtoAdicionado">Product (s) Added (s) to the list! </string>
    <string name="mensagem.informa.selecionarProduto">Please select at least one product to be Added to List </string>
    <string name="mensagem.informa.itemMarcado">No items marked as complete! </string>
    <string name="mensagem.informa.categoriaCriada">Category Created! </string>
    <string name="mensagem.informa.listaCriada">List Created! </string>
    <string name="mensagem.informa.produtoInserido">Product successfully inserted! </string>
    <string name="mensagem.informa.produtoExcluido">Product successfully deleted! </string>
    <string name="mensagem.informa.listaExcluida">List deleted successfully! </string>
    <string name="mensagem.informa.categoriaExcluida">Category deleted successfully! </string>
    <string name="mensagem.informa.listaProdutoRemovido">Product successfully removed from the list! </string>
    <string name="mensagem.informa.produtoAlterado">Product successfully changed! </string>
    <string name="mensagem.informa.categoriaAlterada">Category changed successfully! </string>
    <string name="mensagem.informa.confirmaResetBanco">By resetting the database, all data will be erased. Confirms the reset database? </string>
    <string name="mensagem.informa.bancoResetado">Database reset successful! </string>
    <string name="mensagem.informa.categoriaNaoExcluida">There are products in this category can not be excluded! </string>
    <string name="mensagem.enviar.email">Send Email...</string>
    <string name="mensagem.sobre">All rights reserved! \n Rodrigo Ferreira \n dilcve@gmail.com \n version 1.0.2</string>
</resources>
